# AoC-2023

haskell/: README.md  haskell.cabal
haskell/lib/: Input.hs
haskell/y2022/d01/: Y2022D01.hs
haskell/y2022/d02/: Y2022D02.hs
haskell/y2022/d03/: Y2022D03.hs
haskell/y2023/d01/: Y2023D01.hs
haskell/y2023/d02/: Y2023D02.hs
haskell/y2023/d03/: Y2023D03.hs
haskell/y2023/d04/: Y2023D04.hs
haskell/y2023/d05/: Y2023D05.hs
haskell/y2023/d06/: Y2023D06.hs
haskell/y2023/d07/: Y2023D07.hs
haskell/y2023/d08/: Y2023D08.hs
haskell/y2023/d09/: Y2023D09.hs
haskell/y2023/d10/: Y2023D10.hs
haskell/y2023/d11/: Y2023D11.hs
haskell/y2023/d12/: Y2023D12.hs
haskell/y2023/d13/: Y2023D13.hs
haskell/y2023/d14/: Y2023D14.hs
haskell/y2023/d15/: Y2023D15.hs
prolog/lib/: input.pl  lineparser.pl
prolog/y2023/d01/: y2023d01.pl
prolog/y2023/d02/: y2023d02.pl
prolog/y2023/d04/: y2023d04.pl
