cabal-version:      2.4
name:               haskell
version:            0.1.0.0
author:             JonasssC

library input
    exposed-modules:  Input
    hs-source-dirs:   lib
    build-depends:    
        , split
        , text
        , base      ^>=4.17.2.0


executable Y2022D01
    main-is:          Y2022D01.hs

    build-depends: 
        , text
        , input
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2022\d01
    default-language: Haskell2010


executable Y2022D02
    main-is:          Y2022D02.hs

    build-depends: 
        , text
        , input
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2022\d02
    default-language: Haskell2010


executable Y2022D03
    main-is:          Y2022D03.hs

    build-depends: 
        , text
        , input
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2022\d03
    default-language: Haskell2010


executable Y2023D01
    main-is:          Y2023D01.hs

    build-depends: 
        , text
        , input
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d01
    default-language: Haskell2010


executable Y2023D02
    main-is:          Y2023D02.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d02
    default-language: Haskell2010


executable Y2023D03
    main-is:          Y2023D03.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d03
    default-language: Haskell2010


executable Y2023D04
    main-is:          Y2023D04.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d04
    default-language: Haskell2010


executable Y2023D05
    main-is:          Y2023D05.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d05
    default-language: Haskell2010


executable Y2023D06
    main-is:          Y2023D06.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d06
    default-language: Haskell2010


executable Y2023D07
    main-is:          Y2023D07.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d07
    default-language: Haskell2010


executable Y2023D08
    main-is:          Y2023D08.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d08
    default-language: Haskell2010


executable Y2023D09
    main-is:          Y2023D09.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d09
    default-language: Haskell2010


executable Y2023D10
    main-is:          Y2023D10.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d10
    default-language: Haskell2010


executable Y2023D11
    main-is:          Y2023D11.hs

    build-depends: 
        , text
        , timeit
        , input
        , split
        , containers
        , base      ^>=4.17.2.0
    hs-source-dirs:   y2023\d11
    default-language: Haskell2010
